# mod-llm-demo

./: .gitignore  Makefile  README.md  allowed_urls.json  cleaned_content.md  grpo.ipynb  launch_ssh.py  main.py  pyproject.toml
data/allowed/: 0001.md  0004.md  0005.md  0006.md  0007.md  0009.md  0010.md  0011.md  0012.md  0013.md  0014.md  0015.md  0016.md  0017.md  0018.md  0019.md  0020.md  0021.md  0022.md  0023.md  0026.md  0027.md  0028.md  0030.md  0031.md  0032.md  0033.md  0034.md  0035.md  0036.md  0039.md  0040.md  0041.md  0042.md  0043.md  0044.md  0046.md  0050.md  0051.md  0052.md  (+37 more)
data/disallowed/: 0001.md  0006.md  0007.md  0008.md  0009.md  0011.md  0015.md  0016.md  0019.md  0022.md  0024.md  0025.md  0027.md  0030.md  0032.md  0034.md  0035.md  0036.md  0037.md  0038.md  0041.md  0043.md  0044.md  0047.md  0048.md  0049.md  0051.md  0054.md  0055.md  0058.md  0059.md  0060.md  0061.md  0066.md  0068.md  0069.md  0071.md  0072.md  0074.md  0075.md  (+13 more)
eval/: allowed_urls.json  disallowed_seeds.json
eval/allowed/: 0001.md  0002.md  0003.md  0004.md  0005.md  0006.md  0007.md  0008.md  0009.md  0010.md  0011.md  0012.md  0013.md  0014.md  0015.md  0016.md  0017.md  0018.md  0019.md  0020.md  0021.md  0022.md  0023.md  0024.md  0025.md
eval/disallowed/: 0001.md  0002.md  0003.md  0004.md  0005.md  0006.md  0007.md  0008.md  0009.md  0010.md  0011.md  0012.md  0013.md  0014.md  (+11 more)
lib/: data_helper.py  evaluations.py  example.py  llm.py  md_helper.py  prompts.py  regex_scorer.py  scraper.py  utils.py
train/: allowed_urls.json  disallowed_seeds.json
(+126 files in other folders)
