[project]
name = "mod-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "anthropic>=0.49.0",
    "braintrust>=0.0.185",
    "autoevals>=0.0.121",
    "ipykernel>=6.29.5",
    "modal>=0.73.78",
    "sshtunnel>=0.4.0",
    "datasets>=3.3.2",
    "matplotlib>=3.10.1",
    "transformers>=4.49.0",
    "vllm>=0.7.3",
]
